--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <p>Ты - особенная для меня и каждая встреча с тобой оставляет в моем сердце незабываемые воспоминания.</p>
         <p>Я не могу не признаться, что мои чувства к тебе стали гораздо глубже. Я ценю твою доброту, ум и то, как ты заставляешь меня улыбаться.</p>
         <p>Ты - человек, с которым я хочу проводить больше времени, делиться радостью и поддерживать друг друга в трудные моменты.</p>
-        <p>Итак, вот оно: я влюблен в тебя. Мои чувства к тебе глубоки и искренни.</p>
-        <p>Я надеюсь, что ты рассмотрит это и можешь поделиться своими мыслями со мной. Независимо от твоего ответа, я всегда буду ценить наше общение.</p>
+        <p>Итак, вот оно: я влюблен в тебя хочу встречаться с тобой. Мои чувства к тебе глубоки и искренни и хочу чтобы ты была моей девушкой ❤️.</p>
         <p>С уважением,
         Алибек</p>
     </div>
